[package]
name = "oca-js"
description = "Bindings for the OCA in JavaScript"
version = "0.8.0"
license = "EUPL-1.2"
edition = "2021"
authors = [
  "Marcin Olichwiruk <marcin.olichwiruk@opensoftware.pl>",
  "Robert Mitwicki <robert.mitwicki@opensoftware.pl>",
  "Michał Pietrus <michal.pietrus@opensoftware.pl>",
]
readme = "README.md"
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = "debuginfo"

[dependencies]
console_error_panic_hook = "0.1.7"
isolang = { version = "2.4.0", features = ["serde"] }
oca-sdk-rs =  "2.0.0-rc.8"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0"
wasm-bindgen = "0.2.110"


[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
